<resources>
    <string name="app_name">e-NABLE App</string>
    <string name="textView_UserAuthenticationActivity_CPF">CPF:</string>
    <string name="editText_UserAuthenticationActivity_CPF">Informe o CPF</string>
    <string name="textView_UserAuthenticationActivity_Password">Senha:</string>
    <string name="editText_UserAuthenticationActivity_Password">Informe a Senha</string>
    <string name="button_UserAuthenticationActivity_User_Create">Quero solicitar uma prótese</string>
    <string name="button_UserSelectProfileActivity_Professional_Health">Sou um profissional médico</string>
    <string name="button_UserSelectProfileActivity_Benefited">Gostaria de receber o benefício</string>
    <string name="textView_UserBenefitedNameActivity_Question">Olá tudo bom ?, primeiro eu gostaria de saber o seu nome.</string>
    <string name="editText_UserBenefitedNameActivity_name_hit">Digite o seu nome aqui.</string>
    <string name="button_Next">PRÓXIMA ETAPA</string>
    <string name="button_Save">SALVAR</string>
    <string name="textView_UserBenefitedStartActivity_Title">Parabéns você concluiu</string>
    <string name="button_UserBenefitedStartActivity_Resume">CONTINUAR PREENCHIMENTO</string>
    <string name="editText_UserBenefitedEmailActivity_name_hit">Digite o seu e-mail aqui.</string>
    <string name="button_Closed">Fechar</string>
    <string name="textView_UserBenefitedQuestionLoadActivity_Mag">Salvando os dados, aguarde...</string>
    <string name="TextView_UserBenefitedQuestionActivity_Question_Date">Selecione a data</string>
    <string name="button_UserAuthenticationActivity_User_Attendance">Quero ser voluntário da área de saude</string>
    <string name="textView_UserProfileAuthentication_HelpText">Será necessário realizar a autenticação para continuar</string>
    <string name="textView_UserProfileAuthentication_Identification">CPF:</string>
    <string name="textView_UserProfileAuthentication_Password">Senha:</string>
    <string name="button_UserProfileAuthentication_Enter">Entrar</string>
    <string name="button_UserProfileAuthentication_Create">Criar Conta</string>
    <string name="textView_HealthCareProfessionalCreateActivity_HelpText">Cadastro de profissional de saúde</string>
    <string name="textView_HealthCareProfessionalCreateActivity_Identification">CPF</string>
    <string name="textView_HealthCareProfessionalCreateActivity_NameComplete">Nome Completo</string>
    <string name="textView_HealthCareProfessionalCreateActivity_MedicalLicence">Licença Médica</string>
    <string name="button_HealthCareProfessionalCreateActivity_Create">Cadastrar</string>
    <string name="textView_HealthCareProfessionalPatientDetailActivity_NameComplete">Paulo José da Silva Medeiros</string>
    <string name="textView_HealthCareProfessionalPatientDetailActivity_Age">Ideade: 16 Anos</string>
    <string name="textView_HealthCareProfessionalPatientDetailActivity_Distance">10 km de distância</string>
    <string name="button_HealthCareProfessionalPatientDetailActivity_Detail">Ver detalhes do paciente</string>
    <string name="button_COVID19Activity_QueroReceber">Quero Receber</string>
    <string name="button_COVID19Activity_QueroImprimir">Quero Imprimir</string>
    <string name="button_QueroImprimirActivity_Cadastro">Cadastro</string>
    <string name="textView_QueroImprimirTermActivity">Termo de Aceite</string>
    <string name="button_QueroImprimirActivity_ConfirmarDoacao">Confirmar Doação</string>
    <string name="button_UserProfileAuthentication_Accept">Aceitar</string>
    <string name="textView_QueroImprimirTermInputDataActivity">Informe os dados abaixo</string>
    <string name="textView_QueroImprimirTermInputDataActivity_Name">Nome</string>
    <string name="editText_QueroImprimirTermInputDataActivity_Name">Informe o seu nome</string>
    <string name="textView_QueroImprimirTermInputDataActivity_CPF">CPF</string>
    <string name="editText_QueroImprimirTermInputDataActivity_CPF">Informe o seu CPF</string>
    <string name="textView_QueroImprimirTermInputDataActivity_Phone">Telefone</string>
    <string name="editText_QueroImprimirTermInputDataActivity_Phone">Informe o seu telefone</string>
    <string name="textView_QueroImprimirConfirmarDoacaoActivity_Qtd">Quantas unidades você doou ?</string>
    <string name="editText_QueroImprimirConfirmarDoacaoActivity_Qtd">Informe a quantidade</string>
    <string name="button_QueroImprimirConfirmarDoacaoActivity_Confirmed">Confirmar</string>
    <string name="button_QueroImprimirTermInputDataActivity_Accept">Eu aceito no termo de responsabilidade</string>
    <string name="textView_QueroImprimirActivity">Quero Imprimir</string>
    <string name="textView_QueroReceberActivity">Quero Receber</string>
    <string name="button_QueroReceberActivity_Cadastro">Cadastro</string>
    <string name="textView_QueroReceberRegistredActivity">
        SOLICITAÇÃO DE CADASTRO PARA RECEBIMENTO DE ESCUDO FACIAL
    \n\nCadastre aqui o órgão / unidade de saúde PÚBLICA que necessita de Escudos Faciais como EPI para o atendimento de paciente com COVID-19

\n\nATENÇÃO: O CADASTRO NÃO É GARANTIA DE RECEBIMENTO DO MATERIAL MAS AJUDA A EXPOR A NECESSIDADE E MOBILIZAR VOLUNTÁRIOS NA SUA REGIÃO
    </string>
    <string name="textView_QueroImprimirConfirmarDoacaoListActivity">Selecione para quem realizou a doação:</string>
    <string name="button_QueroImprimirActivity_AreaPrint">Área de impressão</string>
    <string name="textView_QueroReceberRegistredActivity_Email">Endereço de e-mail</string>
    <string name="editText_QueroReceberRegistredActivity_Email">Digite o e-mail de contato</string>
    <string name="textView_QueroReceberRegistredActivity_InstituteName">Nome da Instituição</string>
    <string name="editText_QueroReceberRegistredActivity_InstituteName">Digite o nome da instituição</string>
    <string name="radioButton_Public">Instituição Pública</string>
    <string name="radioButton_Private">Instituição Privada</string>
    <string name="textView_QueroReceberRegistredActivity_Institute">Sua instituição é Pública ou Privada</string>
    <string name="button_QueroReceberActivity_ConfirmarRecebimento">Confirmar recebimento</string>
    <string name="textView_QueroReceberRegistredActivity_Utilizacao">Os dispositivos são para distribuição ou uso próprio?</string>
    <string name="radioButton_Distribuicao">Distribuição</string>
    <string name="radioButton_Proprio">Uso próprio</string>
    <string name="textView_QueroReceberRegistredActivity_Resume">Escreva um pequeno resumo para ser compartilhado com os voluntários</string>
    <string name="editText_QueroReceberRegistredActivity_Resume">Digite um pequeno resumo</string>
    <string name="textView_QueroReceberRegistredActivity_Endereco">Endereço para envio das doações</string>
    <string name="editText_QueroReceberRegistredActivity_Endereco">Digite o endereço</string>
    <string name="textView_QueroReceberRegistredActivity_CEP">Qual o CEP (apenas números)?</string>
    <string name="editText_QueroReceberRegistredActivity_CEP">Digite o CEP</string>
    <string name="radioButton_Possibilidade_Sim">Sim</string>
    <string name="radioButton_Possibilidade_Nao">Não</string>
    <string name="textView_QueroReceberRegistredActivity_Possibilidade">Existe possibilidade da instituição recolher os escudos faciais diretamente com o voluntário/doador?</string>
</resources>