<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".User.UserAuthenticationActivity">

    <ImageView
        android:id="@+id/imageView_UserAuthenticationActivity_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_UserAuthenticationActivity_CPF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView_UserAuthenticationActivity_CPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:visibility="gone"
        android:text="@string/textView_UserAuthenticationActivity_CPF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_UserAuthenticationActivity_logo" />

    <EditText
        android:id="@+id/editText_UserAuthenticationActivity_CPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editText_UserAuthenticationActivity_CPF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_UserAuthenticationActivity_CPF" />

    <TextView
        android:id="@+id/textView_UserAuthenticationActivity_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/textView_UserAuthenticationActivity_Password"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_UserAuthenticationActivity_CPF" />

    <EditText
        android:id="@+id/editText_UserAuthenticationActivity_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:ems="10"
        android:hint="@string/editText_UserAuthenticationActivity_Password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_UserAuthenticationActivity_Password" />

    <Button
        android:id="@+id/button_UserAuthenticationActivity_User_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorDefault"
        android:text="@string/button_UserAuthenticationActivity_User_Create"
        app:layout_constraintBottom_toTopOf="@+id/button_UserAuthenticationActivity_User_Attendance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_UserAuthenticationActivity_Password" />

    <Button
        android:id="@+id/button_UserAuthenticationActivity_User_Attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorDefault"
        android:text="@string/button_UserAuthenticationActivity_User_Attendance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_UserAuthenticationActivity_User_Create" />


</androidx.constraintlayout.widget.ConstraintLayout>