<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Menu.QueroImprimirActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_QueroImprimirActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/textView_QueroImprimirActivity"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_QueroImprimirActivity_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:visibility="gone"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/button_QueroImprimirActivity_Cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorDefault"
                android:visibility="gone"
                android:text="@string/button_QueroImprimirActivity_Cadastro" />

            <Button
                android:id="@+id/button_QueroImprimirActivity_ConfirmarDoacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"
                android:background="@color/colorDefault"
                android:text="@string/button_QueroImprimirActivity_ConfirmarDoacao" />

            <Button
                android:id="@+id/button_QueroImprimirActivity_AreaPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"
                android:background="@color/colorDefault"
                android:text="@string/button_QueroImprimirActivity_AreaPrint" />

        </LinearLayout>
    </ScrollView>
    
</androidx.constraintlayout.widget.ConstraintLayout>